# Aurora-X

./: .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  REQUIREMENTS.txt  aurora_analysis.html  aurora_batch_test.cpp  aurora_dash_lab.py  aurora_extreme.hpp  aurora_hal.hpp  aurora_intention.hpp  aurora_organism.hpp  aurora_results.csv  aurora_x.cpp  test_aurora_extreme.cpp
Orginal/: aurora_extreme.hpp  aurora_hal.hpp  aurora_x.cpp
src/core/: AuroraSafetyMonitor.hpp
tests/: test_aurora_organism.cpp
